@@ -1386,8 +1386,13 @@ class DOMFunctionDeclaration(DOMElement):
         #                             (set when functions are flattened)
         self.is_default_argument_helper = False  # Set if this is an autogenerated function with arguments defaulted
         #                                         (see mod_generate_default_argument_functions)
-        self.is_manual_helper = False  # Set if this is a manually-added helper function (see
-        # mod_add_helper_functions for more details)
+        self.is_manual_helper = False  # Set if this is a manually-added helper function
+        #                                (see mod_add_helper_functions for more details)
+        self.has_imstr_helper = False  # Set if this is the ImStr variant of a function that has had a char* helper
+        #                                generated (see mod_generate_imstr_helpers for more details)
+        self.is_imstr_helper = False  # Set if this is a helper function that converts char* into ImStr
+        #                                (see mod_generate_imstr_helpers for more details)
+
         self.function_name_alignment = 0  # Column to align the function name to (see mod_align_function_names)
 
     # Parse tokens from the token stream given
@@ -1635,7 +1640,10 @@ class DOMFunctionDeclaration(DOMElement):
         if self.is_static and (not context.for_implementation):
             declaration += "static "
         if self.is_inline and (not context.for_implementation):
-            declaration += "inline "
+            if context.for_c:
+                declaration += "static inline "
+            else:
+                declaration += "inline "
         if self.return_type is not None:
             declaration += self.return_type.to_c_string(context) + " "
         return declaration
